# todo-list

./: .gitignore  CMakeLists.txt  README.md  README.org  lebuild  ledebug  lerun  letest  note.org  task.save
doc/: Untitled.mdj  uml.mdj
src/: CMakeLists.txt  main.cpp
src/include/: CMakeLists.txt  all_headers.h
src/include/file_io/: CMakeLists.txt  File_parser.cpp  File_parser.h  File_writer.cpp  File_writer.h  main.cpp
src/include/serializers/: CMakeLists.txt  TaskFileParser.cpp  TaskFileParser.hpp  TaskSerializer.cpp  TaskSerializer.hpp
src/include/task/: .gdb_history  CMakeLists.txt  ChildSeeker.hpp  Date.cpp  Date.hpp  TaskComponent.cpp  TaskComponent.hpp  TaskComposite.cpp  TaskComposite.hpp  TaskCounter.hpp  TaskDoableChecker.hpp  TaskLeaf.cpp  TaskLeaf.hpp  Task_component.cpp  Task_components.cpp  Task_components.h  Task_composite.cpp  Task_leaf.cpp  all.hpp  initializers.cpp  initializers.hpp  smart_pointer_initializers.cpp
src/include/task_list/: Task_list.h
src/include/ui/: CMakeLists.txt  Client_CLI.h  Command_line_parser.h  Parser.h  TaskClient.cpp  TaskClient.hpp  Task_client.cpp  Task_client.h
src/include/view/: CMakeLists.txt  TableRenderer.hpp  View.cpp  View.hpp
test/: .gdb_history  CMakeLists.txt  minitest.hpp  test_client.hpp  test_counting.hpp  test_date.hpp  test_doable.hpp  test_fileio.h  test_main.cpp  test_serializer.hpp  test_task_components.h  test_task_components.hpp  test_ui.h
test/.cache/clangd/index/: minitest.hpp.DBE6D810C7C09FD9.idx  test_client.hpp.4203B22F1CBFECDC.idx  test_counting.hpp.347E1DF988ADBD69.idx  test_date.hpp.4DF9F6F947E1B4AB.idx  test_doable.hpp.5696E4F9D600F099.idx  test_main.cpp.00E71A5E1EFF9107.idx  test_serializer.hpp.65ED6986799561C6.idx  test_task_components.hpp.CBEE597B7770A920.idx
test/files/: out
test/testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
